페이지 구성 완료

--- a/bossInfo.html
+++ b/bossInfo.html
@@ -60,7 +60,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 									<span class="icon"></span>
 								</button>
 								<ul class="main-menu">
-									<li class="menu-item on">
+									<li class="menu-item">
 										<a href="index.html" class="goScroll">서버정보</a>
 									</li>
 									<li class="menu-item">
@@ -69,7 +69,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 									<li class="menu-item goParentScroll">
 									  <a href="hunting_ground.html" class="goScroll">사냥터정보</a>
 									</li>					
-									<li class="menu-item goParentScroll">
+									<li class="menu-item on">
 										<a href="bossInfo.html" class="goScroll">보스정보</a>
 									</li>	
 									<li class="menu-item goParentScroll">
@@ -158,96 +158,67 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</section>
 
 
+
 	<section class="services sec-normal motpath pb-80 sec-bg4" style="padding-bottom: 0;" >
-		<div class="container" style="max-width: 80% ;">
+		<div class="container" >
 			<div class="service-wrap">
 				<div class="row">
 					<div class="col-sm-12 text-left">
 						<!-- <h2 class="section-heading text-center" style="display: block;"></h2> -->
 					</div>
 
-					<div class="col-sm-15  wow  fadeInUp fast animated">
+					<div class="col-sm-12 wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
 								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a4.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">서버정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
-								</a>
-							</div>							
-						</div>
-					</div>
-
-					<div class="col-sm-15  wow fadeInUp fast animated">
-						<div class="service-section section-padding-0" >
-							<div class="item-2">
-								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a5.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">컨텐츠정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
+									<img src="./asset/images/a14.jpg" />		
 								</a>
 							</div>							
 						</div>
 					</div>
 
 
-					<div class="col-sm-15  wow  fadeInUp fast animated">
+					<div class="col-sm-12   mb-5 wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
 								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a6.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">사냥터정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
+									<img src="./asset/images/a15.jpg" />		
 								</a>
 							</div>							
 						</div>
 					</div>
 
 
-				<div class="col-sm-15  wow  fadeInUp fast animated">
+					<div class="col-sm-12 mt-5  wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
 								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a7.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">보스정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
+									<img src="./asset/images/a16.jpg" />		
 								</a>
 							</div>							
 						</div>
 					</div>
 
 
-				<div class="col-lg-15  wow  fadeInUp fast animated">
+				<div class="col-sm-12 mb-5 wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
 								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a8.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">다운로드</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
+									<img src="./asset/images/a17.jpg" />		
 								</a>
 							</div>							
 						</div>
-					</div>
+				</div>
+
+
 
 				</div>
 			</div>
 		</div>
 	</section>
+
+	
+
 
 	<div class="contentScroll" style="display: none;"><div class="cnt01"></div></div>
 	<div class="contentScroll" style="display: none;"><div class="cnt02"></div></div>
