--- a/contentInfo.html
+++ b/contentInfo.html
@@ -60,18 +60,18 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 									<span class="icon"></span>
 								</button>
 								<ul class="main-menu">
-									<li class="menu-item on">
+									<li class="menu-item">
 										<a href="index.html" class="goScroll">서버정보</a>
 									</li>
-									<li class="menu-item">
+									<li class="menu-item on">
 										<a href="contentInfo.html" class="goScroll">컨텐츠정보</a>
 									</li>
 									<li class="menu-item goParentScroll">
-									  <a href="hunting_ground.html" class="goScroll">사냥터정보</a>
+										<a href="hunting_ground.html" class="goScroll">사냥터정보</a>
 									</li>					
 									<li class="menu-item goParentScroll">
 										<a href="bossInfo.html" class="goScroll">보스정보</a>
-									</li>	
+									</li>										
 									<li class="menu-item goParentScroll">
 										<a href="#" class="goScroll">다운로드</a>
 									</li>																																				
@@ -159,96 +159,63 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 	<section class="services sec-normal motpath pb-80 sec-bg4" style="padding-bottom: 0;" >
-		<div class="container" style="max-width: 80% ;">
+		<div class="container" >
 			<div class="service-wrap">
 				<div class="row">
 					<div class="col-sm-12 text-left">
 						<!-- <h2 class="section-heading text-center" style="display: block;"></h2> -->
 					</div>
 
-					<div class="col-sm-15  wow  fadeInUp fast animated">
+					<div class="col-sm-12  mb-5 wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
 								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a4.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">서버정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
-								</a>
-							</div>							
-						</div>
-					</div>
-
-					<div class="col-sm-15  wow fadeInUp fast animated">
-						<div class="service-section section-padding-0" >
-							<div class="item-2">
-								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a5.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">컨텐츠정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
+									<img src="./asset/images/a10.jpg" />		
 								</a>
 							</div>							
 						</div>
 					</div>
 
 
-					<div class="col-sm-15  wow  fadeInUp fast animated">
+					<div class="col-sm-12  mt-5 mb-5 wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
 								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a6.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">사냥터정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
+									<img src="./asset/images/a11.jpg" />		
+								</a>
+							</div>							
+						</div>
+					</div>
+
+					<div class="col-sm-12 mt-5 mb-5  wow  fadeInUp fast animated">
+						<div class="" >
+							<div class="item-2 text-center">
+								<a href="server-info.html" class="card" style="display: block;">
+									<img src="./asset/images/a12.png" style="max-width: 100px" />		
 								</a>
 							</div>							
 						</div>
 					</div>
 
 
-				<div class="col-sm-15  wow  fadeInUp fast animated">
+					<div class="col-sm-12  mt-5 mb-5  wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
 								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a7.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">보스정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
+									<img src="./asset/images/a13.png" />		
 								</a>
 							</div>							
 						</div>
 					</div>
 
 
-				<div class="col-lg-15  wow  fadeInUp fast animated">
-						<div class="service-section section-padding-0" >
-							<div class="item-2">
-								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a8.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">다운로드</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
-								</a>
-							</div>							
-						</div>
-					</div>
 
 				</div>
 			</div>
 		</div>
 	</section>
 
+	
 	<div class="contentScroll" style="display: none;"><div class="cnt01"></div></div>
 	<div class="contentScroll" style="display: none;"><div class="cnt02"></div></div>
 	<div  id="serviceCenter"></div>
@@ -256,63 +223,6 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
    	
 
 
-  <div id="download">&nbsp;</div>	
-
-	<section class="services sec-normal motpath sec-bg4 " id="download-section" style="padding-top: 0;background: #f6f6f6;" >
-		<div class="container cnt03" >
-			<div class="service-wrap" id="download-div">
-				<div style="height:60px;" >&nbsp;</div>
-				<div class="row">
-					<div class="col-sm-12 text-center">
-			<div>
-				
-			</div>						
-
-<div class="inform_area" style="background-color: #fefbf5; border: 1px solid rgb(229, 217, 208); 
-box-sizing: border-box; font-size: 13px; letter-spacing: 0px; line-height: 1.69; margin: 10px 0px 0px; padding: 25px; text-indent: 0px;">
-
-<span style="color: #c38b61; font-size: 1.1rem; text-align: center;"><b>다운로드시 필독사항</b></span><br><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- 구글 로그인 후 다운로드를 진행 해주세요</span><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- WINDOWS DEFFENDER를 비활성화 해주시기 바랍니다.</span><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- 타서버 접속 이력이 있는 경우 클라이언트 삭제 후 재 설치가 필요합니다.</span><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- 게임 핵 또는 치트엔진 사용 시 접속 불가 또는 튕김 현상이 발생합니다.</span><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- 접속 오류 발생 시 고객센터 원격 제어 서비스를 요청하시기 바랍니다.</span><br>
-</div>
-
-<br>
-
-
-
-
-
-<div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1C0qVuTVCF1M5xkKQuZfcnQ6Udbq73swu/view?usp=share_link" target="_blank">
-	<img alt="다운로드1"  data-original-height="1373" data-original-width="1903" 
-	src="./asset/images/a18.jpg">
-</a>
-</div>
-
-<div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1wXf7rPVoTS7MkYmStKZIC1P4-BUzvwSA/view?usp=share_link" target="_blank">
-	<img alt="다운로드2"  data-original-height="1373" data-original-width="1903" 
-	src="./asset/images/a19.jpg">
-</a>
-</div>
-
-<div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1PWLgFicCOsHwQILWjQAxEWmajVmhRKZ2/view?usp=share_link" target="_blank">
-	<img alt="다운로드3"  data-original-height="1373" data-original-width="1903" 
-	src="./asset/images/a20.jpg">
-</a>
-</div>
-
-				</div>
-			</div>
-		</div>
-		</div>
-	</section>
-	
-	
 	
 
 	<footer class="footer" >		
