--- a/hunting_ground.html
+++ b/hunting_ground.html
@@ -60,14 +60,14 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 									<span class="icon"></span>
 								</button>
 								<ul class="main-menu">
-									<li class="menu-item on">
+									<li class="menu-item ">
 										<a href="index.html" class="goScroll">서버정보</a>
 									</li>
 									<li class="menu-item">
 										<a href="contentInfo.html" class="goScroll">컨텐츠정보</a>
 									</li>
-									<li class="menu-item goParentScroll">
-									  <a href="hunting_ground.html" class="goScroll">사냥터정보</a>
+									<li class="menu-item on">
+										<a href="hunting_ground.html" class="goScroll">사냥터정보</a>
 									</li>					
 									<li class="menu-item goParentScroll">
 										<a href="bossInfo.html" class="goScroll">보스정보</a>
@@ -159,90 +159,23 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 	<section class="services sec-normal motpath pb-80 sec-bg4" style="padding-bottom: 0;" >
-		<div class="container" style="max-width: 80% ;">
+		<div class="container" >
 			<div class="service-wrap">
 				<div class="row">
 					<div class="col-sm-12 text-left">
 						<!-- <h2 class="section-heading text-center" style="display: block;"></h2> -->
 					</div>
 
-					<div class="col-sm-15  wow  fadeInUp fast animated">
+					<div class="col-sm-12  wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
 								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a4.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">서버정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
+									<img src="./asset/images/a9.png">								
 								</a>
 							</div>							
 						</div>
 					</div>
 
-					<div class="col-sm-15  wow fadeInUp fast animated">
-						<div class="service-section section-padding-0" >
-							<div class="item-2">
-								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a5.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">컨텐츠정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
-								</a>
-							</div>							
-						</div>
-					</div>
-
-
-					<div class="col-sm-15  wow  fadeInUp fast animated">
-						<div class="service-section section-padding-0" >
-							<div class="item-2">
-								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a6.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">사냥터정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
-								</a>
-							</div>							
-						</div>
-					</div>
-
-
-				<div class="col-sm-15  wow  fadeInUp fast animated">
-						<div class="service-section section-padding-0" >
-							<div class="item-2">
-								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a7.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">보스정보</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
-								</a>
-							</div>							
-						</div>
-					</div>
-
-
-				<div class="col-lg-15  wow  fadeInUp fast animated">
-						<div class="service-section section-padding-0" >
-							<div class="item-2">
-								<a href="server-info.html" class="card">
-									<div class="thumb" style="background-image: url(./asset/images/a8.jpg);">
-									</div>
-									<article>
-										<h1 style="font-size: 1.6rem;" id="server-info-h1">다운로드</h1>
-										<span style="font-size: 1.0rem;">바로가기</span>
-									</article>
-								</a>
-							</div>							
-						</div>
-					</div>
 
 				</div>
 			</div>
@@ -256,63 +189,92 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
    	
 
 
-  <div id="download">&nbsp;</div>	
+  	<div id="download">&nbsp;</div>	
 
-	<section class="services sec-normal motpath sec-bg4 " id="download-section" style="padding-top: 0;background: #f6f6f6;" >
-		<div class="container cnt03" >
-			<div class="service-wrap" id="download-div">
-				<div style="height:60px;" >&nbsp;</div>
-				<div class="row">
-					<div class="col-sm-12 text-center">
-			<div>
+
+	
+	<section class="services help pt-4  mt-5 mb-5" style="background: #f6f6f6; ">
+		<div class="container">
+			<div class="service-wrap">
 				
-			</div>						
+				<div class="row">
 
-<div class="inform_area" style="background-color: #fefbf5; border: 1px solid rgb(229, 217, 208); 
-box-sizing: border-box; font-size: 13px; letter-spacing: 0px; line-height: 1.69; margin: 10px 0px 0px; padding: 25px; text-indent: 0px;">
+					<div class="col-sm-12 col-md-12 col-lg-12">
+						<div class="help-container">
+							<a href="#" onclick="return false;" class="help-item">
+								<div class="img" style="line-height: 400px;text-align: center;">
+									<img src="./asset/images/main_7.png">
+								</div>
+								<div class="inform">
+									<div class="title">필승서버는 1주일 서버입니다.</div>
+									<div class="description"><br>
+							<b>1일차</b> 10 / 7 /7  65Lv <br>
+							<b>2일차</b> 10 / 8 /8  70Lv  &nbsp;&nbsp; 집행제작(인첸5)<br>								
+							<b>3일차</b> 11 / 9 /9  75Lv  &nbsp;&nbsp; 4대법서 판매 <br>
+							<b>4~7일차</b> 85lv  11 / 10 /10 80Lv   <br>
+									 <br> 									 
+							 <strong>의견 수렴후 과반수 연장 찬성시 연장 진행 합니다.</strong>  <br>		
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
 
-<span style="color: #c38b61; font-size: 1.1rem; text-align: center;"><b>다운로드시 필독사항</b></span><br><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- 구글 로그인 후 다운로드를 진행 해주세요</span><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- WINDOWS DEFFENDER를 비활성화 해주시기 바랍니다.</span><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- 타서버 접속 이력이 있는 경우 클라이언트 삭제 후 재 설치가 필요합니다.</span><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- 게임 핵 또는 치트엔진 사용 시 접속 불가 또는 튕김 현상이 발생합니다.</span><br>
-<span style="color: #212529; font-size: 0.9rem; text-align: center;">- 접속 오류 발생 시 고객센터 원격 제어 서비스를 요청하시기 바랍니다.</span><br>
-</div>
-
-<br>
 
 
+					<div class="col-sm-12 col-md-12 col-lg-12">
+						<div class="help-container helpContainer2">
+							<a href="#" onclick="return false;" class="help-item">
+								<div class="img" style="line-height: 550px;text-align: center;">
+									<img src="./asset/images/main_7.png">
+								</div>
+								<div class="inform">
+									<div class="title">필승서버는 어떠한 경우에라도 <br> 측근과 비리를 일삼은 행위는 금할것을 다짐합니다.</div>
+									<div class="description">																
+<br> <b>(서버 4대법서)</b><br> 
+카운터배리어<br> 
+브레이브멘탈<br> 
+스트라이커게일<br> 
+디스인티그레이트<br> <br> 
+
+<b>(서버 인형)</b> <br> 
+1~5단계 인형을 통한 합성으로<br> 
+클래스 인형 진화까지 적용합니다. <br> 
+
+<br> 
+<strong>모든 건의사항 문의는 항상열려 있으니 카톡 혹은 텔레그램으로 문의 바라겠습니다.</strong><br> 							
+							</div>
+								</div>
+							</a>
+						</div>
+					</div>
 
 
+					<div class="col-sm-12 col-md-12 col-lg-12 mb-5">
+						<div class="help-container helpContainer3">
+							<a href="#" onclick="return false;" class="help-item">
+								<div class="img" style="line-height: 200px;text-align: center;">
+									<img src="./asset/images/main_7.png">
+								</div>
+								<div class="inform">
+									<div class="title">저작권 공지사항 모든 저작권은 NCSOFT에게 있으며, NCSOFT의 요청에 의해 중단 될 수 있습니다.</div>
+									<div class="description">										
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>					
 
-<div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1C0qVuTVCF1M5xkKQuZfcnQ6Udbq73swu/view?usp=share_link" target="_blank">
-	<img alt="다운로드1"  data-original-height="1373" data-original-width="1903" 
-	src="./asset/images/a18.jpg">
-</a>
-</div>
 
-<div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1wXf7rPVoTS7MkYmStKZIC1P4-BUzvwSA/view?usp=share_link" target="_blank">
-	<img alt="다운로드2"  data-original-height="1373" data-original-width="1903" 
-	src="./asset/images/a19.jpg">
-</a>
-</div>
-
-<div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1PWLgFicCOsHwQILWjQAxEWmajVmhRKZ2/view?usp=share_link" target="_blank">
-	<img alt="다운로드3"  data-original-height="1373" data-original-width="1903" 
-	src="./asset/images/a20.jpg">
-</a>
-</div>
+		
 
 				</div>
 			</div>
 		</div>
-		</div>
 	</section>
-	
-	
+
+
+
 	
 
 	<footer class="footer" >		
