서브 메뉴 배너 제거

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="site" content="ghkfkd90.com">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>홈 - 필승</title>
+<title>서버정보 - 필승</title>
 <meta name="description" content="필승">
 <link href="./asset/images/favicon.ico" rel="shortcut icon">
 <!-- Fonts -->
