다운로드 정보

--- a/bossInfo.html
+++ b/bossInfo.html
@@ -21,7 +21,7 @@
 <meta property="site" content="ghkfkd90.com">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>홈 - 필승</title>
+<title>보스정보 - 필승</title>
 <meta name="description" content="필승">
 <link href="./asset/images/favicon.ico" rel="shortcut icon">
 <!-- Fonts -->
@@ -73,14 +73,14 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 										<a href="bossInfo.html" class="goScroll">보스정보</a>
 									</li>	
 									<li class="menu-item goParentScroll">
-										<a href="#" class="goScroll">다운로드</a>
+										<a href="index.html#download" class="goScroll">다운로드</a>
 									</li>																																				
 								</ul>
 							</div>
 						</nav>
 
 						<div class="col-lg-2 col-md-4 download" style="top:0px;line-height: 52px;">
-							<button type="button" class=" btn-primary btn-lg" id="btn-download" onclick="location.href='#download'">다운로드</button>										
+							<button type="button" class=" btn-primary btn-lg" id="btn-download" onclick="location.href='index.html#download'">다운로드</button>										
 						</div>
 
 					</div>
@@ -223,22 +223,23 @@ box-sizing: border-box; font-size: 13px; letter-spacing: 0px; line-height: 1.69;
 
 
 
+
 <div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1C0qVuTVCF1M5xkKQuZfcnQ6Udbq73swu/view?usp=share_link" target="_blank">
+<a href="https://drive.google.com/file/d/1PZfr5zxRI-8B_akCWInIb0ywgX5-mdG2/view?usp=share_link" target="_blank">
 	<img alt="다운로드1"  data-original-height="1373" data-original-width="1903" 
 	src="./asset/images/a18.jpg">
 </a>
 </div>
 
 <div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1wXf7rPVoTS7MkYmStKZIC1P4-BUzvwSA/view?usp=share_link" target="_blank">
+<a href="https://drive.google.com/file/d/15ZcXyHCckf5N4ty18sxLnsPVxKiD5q7X/view?usp=share_link" target="_blank">
 	<img alt="다운로드2"  data-original-height="1373" data-original-width="1903" 
 	src="./asset/images/a19.jpg">
 </a>
 </div>
 
 <div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1PWLgFicCOsHwQILWjQAxEWmajVmhRKZ2/view?usp=share_link" target="_blank">
+<a href="https://drive.google.com/file/d/1GbrHwJT2hqqYRut1Wg3xVXkVl-zL3BRv/view?usp=share_link" target="_blank">
 	<img alt="다운로드3"  data-original-height="1373" data-original-width="1903" 
 	src="./asset/images/a20.jpg">
 </a>
