--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 										<a href="bossInfo.html" class="goScroll">보스정보</a>
 									</li>	
 									<li class="menu-item goParentScroll">
-										<a href="#" class="goScroll">다운로드</a>
+										<a href="#download" class="goScroll">다운로드</a>
 									</li>																																				
 								</ul>
 							</div>
 						</nav>
 
 						<div class="col-lg-2 col-md-4 download" style="top:0px;line-height: 52px;">
-							<button type="button" class=" btn-primary btn-lg" id="btn-download" onclick="location.href='#download'">다운로드</button>										
+							<button type="button" class=" btn-primary btn-lg" id="btn-download" onclick="location.href='index.html#download'">다운로드</button>										
 						</div>
 
 					</div>
@@ -286,21 +286,21 @@ box-sizing: border-box; font-size: 13px; letter-spacing: 0px; line-height: 1.69;
 
 
 <div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1C0qVuTVCF1M5xkKQuZfcnQ6Udbq73swu/view?usp=share_link" target="_blank">
+<a href="https://drive.google.com/file/d/1PZfr5zxRI-8B_akCWInIb0ywgX5-mdG2/view?usp=share_link" target="_blank">
 	<img alt="다운로드1"  data-original-height="1373" data-original-width="1903" 
 	src="./asset/images/a18.jpg">
 </a>
 </div>
 
 <div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1wXf7rPVoTS7MkYmStKZIC1P4-BUzvwSA/view?usp=share_link" target="_blank">
+<a href="https://drive.google.com/file/d/15ZcXyHCckf5N4ty18sxLnsPVxKiD5q7X/view?usp=share_link" target="_blank">
 	<img alt="다운로드2"  data-original-height="1373" data-original-width="1903" 
 	src="./asset/images/a19.jpg">
 </a>
 </div>
 
 <div style="margin-bottom: 20px;">
-<a href="https://drive.google.com/file/d/1PWLgFicCOsHwQILWjQAxEWmajVmhRKZ2/view?usp=share_link" target="_blank">
+<a href="https://drive.google.com/file/d/1GbrHwJT2hqqYRut1Wg3xVXkVl-zL3BRv/view?usp=share_link" target="_blank">
 	<img alt="다운로드3"  data-original-height="1373" data-original-width="1903" 
 	src="./asset/images/a20.jpg">
 </a>
@@ -336,7 +336,7 @@ box-sizing: border-box; font-size: 13px; letter-spacing: 0px; line-height: 1.69;
 	<script defer src="./asset/js/bootstrap.min.js"></script>	
 	<script defer src="./asset/js/scripts.min.js"></script>
 	 <script defer src="./asset/js/custom.js"></script>	 	
-	<script defer src="./asset/js/scroll-menu.js"></script>
+	<!-- <script defer src="./asset/js/scroll-menu.js"></script> -->
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
