--- a/huntingGround.html
+++ b/huntingGround.html
@@ -9,14 +9,14 @@
 <meta name="author" content="리니지 - 필승">
 <meta name="robots" content="index,follow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-<meta name="description" content="게임,리니지,프리서버,사설서버,자유서버,리니지프리서버,프리서버구축,자유홍보,오크서버,아인서버,만두서버,강남서버">
-<meta name="keywords" content="게임,리니지,프리서버,사설서버,자유서버,리니지프리서버,프리서버구축,자유홍보,오크서버,아인서버,만두서버,강남서버">
+<meta name="description" content="게임,리니지,프리서버,사설서버,자유서버,리니지프리서버,프리서버구축,자유홍보,필승서버">
+<meta name="keywords" content="게임,리니지,프리서버,사설서버,자유서버,리니지프리서버,프리서버구축,자유홍보,필승서버">
 <meta property="og:title" content="리니지 - 필승">
 <meta property="og:site_name" content="리니지 - 필승">
 <meta property="og:author" content="리니지 - 필승">
 <meta property="og:type" content="website">
 <meta property="og:image" content="./asset/images/meta-img.png">
-<meta property="og:description" content="게임,리니지,프리서버,사설서버,자유서버,리니지프리서버,프리서버구축,자유홍보,오크서버,아인서버,만두서버,강남서버">
+<meta property="og:description" content="게임,리니지,프리서버,사설서버,자유서버,리니지프리서버,프리서버구축,자유홍보,필승서버">
 <meta property="og:url" content="https://ghkfkd90.com">
 <meta property="site" content="ghkfkd90.com">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -67,7 +67,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 										<a href="contentInfo.html" class="goScroll">컨텐츠정보</a>
 									</li>
 									<li class="menu-item on">
-										<a href="hunting_ground.html" class="goScroll">사냥터정보</a>
+										<a href="huntingGround.html" class="goScroll">사냥터정보</a>
 									</li>					
 									<li class="menu-item goParentScroll">
 										<a href="bossInfo.html" class="goScroll">보스정보</a>
@@ -92,7 +92,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 			<div class="container">
 				<div class="row">
 					<div class="col-6">
-						<a href="index.html" > <img class="svg logo-menu" src="./asset/images/logo.png" alt="logo">
+						<a href="index.html" > <img class="svg logo-menu" src="./asset/images/logo.jpg" alt="logo">
 						</a>
 					</div>
 					<div class="col-6">
@@ -104,17 +104,20 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 							</button>
 							<div class="main-menu">
 								<div class="menu-item ">
-										<a href="index.html">홈</a>
+									<a href="index.html">서버정보</a>
 								</div>
 								<div class="menu-item">
-										<a href="server-info.html">서버정보</a>
+									<a href="contentInfo.html">컨텐츠정보</a>
 								</div>
 								<div class="menu-item">
-									<a href="#serviceCenter" onclick="goClose()">고객센터</a>
+									  <a href="huntingGround.html" class="goScroll" onclick="goClose()">사냥터정보</a>									
 								</div>
 								<div class="menu-item">
-									<a href="#download" onclick="goClose()">다운로드</a>
-								</div>									
+									<a href="bossInfo.html" class="goScroll">보스정보</a>
+								</div>	
+								<div class="menu-item">
+									<a href="index.html#download" class="goScroll">다운로드</a>
+								</div>																
 								<div>									
 								</div>
 							</div>
@@ -137,7 +140,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 					<div class="col-sm-12  wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
-								<a href="server-info.html" class="card">
+								<a href="#" class="card">
 									<img src="./asset/images/a9.png">								
 								</a>
 							</div>							
@@ -258,7 +261,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     </footer>
 
 
-	<a id="topBtn" href="#" >
+	<a id="topBtn" href="https://open.kakao.com/o/s0C5SARe" target="_blank" >
 		<img src="./asset/images/a3.png">
 	</a>
 
