--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 									<span class="icon"></span>
 								</button>
 								<ul class="main-menu">
-									<li class="menu-item on">
-										<a href="index.html" class="goScroll">서버정보</a>
+									<li class="menu-item">
+										<a href="serverInfo.html" class="goScroll">서버정보</a>
 									</li>
 									<li class="menu-item">
 										<a href="contentInfo.html" class="goScroll">컨텐츠정보</a>
 									</li>
 									<li class="menu-item goParentScroll">
-									  <a href="huntingGround.html" class="goScroll">사냥터정보</a>
+									  <a href="bossInfo.html" class="goScroll">사냥터정보</a>
 									</li>					
 									<li class="menu-item goParentScroll">
-										<a href="bossInfo.html" class="goScroll">보스정보</a>
+										<a href="bossInfo.html#boss" class="goScroll">보스정보</a>
 									</li>	
 									<li class="menu-item goParentScroll">
 										<a href="#download" class="goScroll">다운로드</a>
@@ -104,16 +104,16 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 							</button>
 							<div class="main-menu">
 								<div class="menu-item ">
-									<a href="index.html">서버정보</a>
+									<a href="serverInfo.html">서버정보</a>
 								</div>
 								<div class="menu-item">
 									<a href="contentInfo.html">컨텐츠정보</a>
 								</div>
 								<div class="menu-item">
-									  <a href="huntingGround.html" class="goScroll" onclick="goClose()">사냥터정보</a>									
+									  <a href="bossInfo.html" class="goScroll" onclick="goClose()">사냥터정보</a>									
 								</div>
 								<div class="menu-item">
-									<a href="bossInfo.html" class="goScroll">보스정보</a>
+									<a href="bossInfo.html#boss" class="goScroll">보스정보</a>
 								</div>	
 								<div class="menu-item">
 									<a href="index.html#download" class="goScroll">다운로드</a>
@@ -172,7 +172,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 					<div class="col-sm-15  wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
-								<a href="index.html" class="card">
+								<a href="serverInfo.html" class="card">
 									<div class="thumb" style="background-image: url(./asset/images/a4.jpg);">
 									</div>
 									<article>
@@ -203,7 +203,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 					<div class="col-sm-15  wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
-								<a href="huntingGround.html" class="card">
+								<a href="bossInfo.html" class="card">
 									<div class="thumb" style="background-image: url(./asset/images/a6.jpg);">
 									</div>
 									<article>
@@ -219,7 +219,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 				<div class="col-sm-15  wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
-								<a href="bossInfo.html" class="card">
+								<a href="bossInfo.html#boss" class="card">
 									<div class="thumb" style="background-image: url(./asset/images/a7.jpg);">
 									</div>
 									<article>
