--- a/serverInfo.html
+++ b/serverInfo.html
@@ -60,17 +60,17 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 									<span class="icon"></span>
 								</button>
 								<ul class="main-menu">
-									<li class="menu-item ">
-										<a href="index.html" class="goScroll">서버정보</a>
+									<li class="menu-item on ">
+										<a href="serverInfo.html" class="goScroll">서버정보</a>
 									</li>
 									<li class="menu-item">
 										<a href="contentInfo.html" class="goScroll">컨텐츠정보</a>
 									</li>
-									<li class="menu-item on">
-										<a href="huntingGround.html" class="goScroll">사냥터정보</a>
+									<li class="menu-item">
+										<a href="bossInfo.html" class="goScroll">사냥터정보</a>
 									</li>					
 									<li class="menu-item goParentScroll">
-										<a href="bossInfo.html" class="goScroll">보스정보</a>
+										<a href="bossInfo.html#boss" class="goScroll">보스정보</a>
 									</li>	
 									<li class="menu-item goParentScroll">
 										<a href="index.html#download" class="goScroll">다운로드</a>
@@ -104,16 +104,16 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 							</button>
 							<div class="main-menu">
 								<div class="menu-item ">
-									<a href="index.html">서버정보</a>
+									<a href="serverInfo.html">서버정보</a>
 								</div>
 								<div class="menu-item">
 									<a href="contentInfo.html">컨텐츠정보</a>
 								</div>
 								<div class="menu-item">
-									  <a href="huntingGround.html" class="goScroll" onclick="goClose()">사냥터정보</a>									
+									  <a href="bossInfo.html" class="goScroll" onclick="goClose()">사냥터정보</a>									
 								</div>
 								<div class="menu-item">
-									<a href="bossInfo.html" class="goScroll">보스정보</a>
+									<a href="bossInfo.html#boss" class="goScroll">보스정보</a>
 								</div>	
 								<div class="menu-item">
 									<a href="index.html#download" class="goScroll">다운로드</a>
@@ -269,7 +269,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script defer src="./asset/js/bootstrap.min.js"></script>	
 	<script defer src="./asset/js/scripts.min.js"></script>
 	 <script defer src="./asset/js/custom.js"></script>	 	
-	<script defer src="./asset/js/scroll-menu.js"></script>
+	<!-- <script defer src="./asset/js/scroll-menu.js"></script> -->
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
