--- a/bossInfo.html
+++ b/bossInfo.html
@@ -40,7 +40,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
  <!-- oncontextmenu='return false' -->
-<body oncontextmenu='return '> 
+<body oncontextmenu='return false '> 
 
 	<header id="header">
 		<div class="menu-wrap fixed">
