https://open.kakao.com/o/sQCUB76e 리크주소 변경

--- a/bossInfo.html
+++ b/bossInfo.html
@@ -250,7 +250,7 @@ box-sizing: border-box; font-size: 13px; letter-spacing: 0px; line-height: 1.69;
     </footer>
 
 
-	<a id="topBtn" href="https://open.kakao.com/o/s0C5SARe" target="_blank" >
+	<a id="topBtn" href="https://open.kakao.com/o/sQCUB76e" target="_blank" >
 		<img src="https://cdn.jsdelivr.net/gh/dlwodyd4013/pilseung@v1.0.0/asset/images/a3.png">
 	</a>
 
