--- a/contentInfo.html
+++ b/contentInfo.html
@@ -172,7 +172,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 					<div class="col-sm-12  mt-5 mb-5  wow  fadeInUp fast animated">
 						<div class="service-section section-padding-0" >
 							<div class="item-2">
-								<a href="https://open.kakao.com/o/s0C5SARe" class="card">
+								<a href="https://open.kakao.com/o/sQCUB76e" class="card">
 									<img src="https://cdn.jsdelivr.net/gh/dlwodyd4013/pilseung@v1.0.0/asset/images/a13.png" />		
 								</a>
 							</div>							
@@ -209,7 +209,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     </footer>
 
 
-	<a id="topBtn" href="https://open.kakao.com/o/s0C5SARe" target="_blank" >
+	<a id="topBtn" href="https://open.kakao.com/o/sQCUB76e" target="_blank" >
 		<img src="https://cdn.jsdelivr.net/gh/dlwodyd4013/pilseung@v1.0.0/asset/images/a3.png">
 	</a>
 
