--- a/serverInfo.html
+++ b/serverInfo.html
@@ -261,7 +261,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     </footer>
 
 
-	<a id="topBtn" href="https://open.kakao.com/o/s0C5SARe" target="_blank" >
+	<a id="topBtn" href="https://open.kakao.com/o/sQCUB76e" target="_blank" >
 		<img src="https://cdn.jsdelivr.net/gh/dlwodyd4013/pilseung@v1.0.0/asset/images/a3.png">
 	</a>
 
