--- a/bossInfo.html
+++ b/bossInfo.html
@@ -34,7 +34,7 @@ integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfN
 crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link href="https://cdn.jsdelivr.net/gh/dlwodyd4013/pilseung@v1.0.0/asset/css/style.min.css" rel="stylesheet">
 
-<!-- Custom color styles -->
+<!-- Custom color styles update-->
 <link href="https://cdn.jsdelivr.net/gh/dlwodyd4013/pilseung@v1.0.0/asset/css/pink.css" rel="stylesheet" title="pink" media="all" >
 <link href="https://cdn.jsdelivr.net/gh/dlwodyd4013/pilseung@v1.0.0/asset/css/custom.css?v=5" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
